feat: implement dead mother
